@@ -22,6 +22,7 @@
 		<div id="notes">
 		</div>
 	</div>
+	<div id="load-more"><a id="loadmore" href="#">Load More</a></div>
 	<div id='float' class="float-load"></div>
   </body>
 </html>
