@@ -90,6 +90,9 @@
 						<div class="mainDiv">
 							Update Interval:
 						</div>
+						<div class="mainDiv">
+						Entries per page:
+						</div>
 					</div>
 					<div id="right">
 						<div class="checkbox">
@@ -97,6 +100,20 @@
 						</div>
 						<div class="textbox">
 							<input title="Time between checking for updates in Minutes" type="number" id="updateinterval"><i style="font-size: 13px; position: relative;"> Minutes</i>
+						</div>
+						<div class="dropdown">
+							<select title="How many entries will be shown before clicking the 'View More' button at the end of page" id="entryamount">
+								<option value="10">10</option>
+								<option value="15">15</option>
+								<option value="20">20</option>
+								<option value="25">25</option>
+								<option value="30">30</option>
+								<option value="35">35</option>
+								<option value="40">40</option>
+								<option value="45">45</option>
+								<option value="50">50</option>
+								<option value="all">All (Very Slow)</option>
+							</select>
 						</div>
 					</div>
 				</div>
