@@ -27,6 +27,9 @@
 	if (localStorage["update_interval"] == undefined) {
 		localStorage["update_interval"] = 60;
 	}
+	if (localStorage["entry_amount"] == undefined) {
+		localStorage["entry_amount"] = 10;
+	}
 	if (localStorage["badge_number"] == undefined) {
 		localStorage["badge_number"] = 0;
 	}
