@@ -14,9 +14,7 @@
 	- option to only show mangas in english/japanese, possibly even other options(which would make it more into a filter system)(Works but currently only for tags)
 	- remove old localStorage notification data(Working but disabled for now)
 	or
-	- parse x amount at a time and scrolling causes older ones to appear(would need to change the way arraynames are stored.)
 	- Possibly add some way of telling when you have already downloaded/read a manga
-	- Add an internal timer to entries so they still update after they are no longer on the notifications page.
 	- Look into gathering info and such in the background to speed up pageloads(Had issues in the past). Maybe even pass it into the localstorage variable through the background script.
 	- Since the addition of the Fakku API possibly change to only use one script for downloading instead of two since all the extra information seems to be on the /read page as well.
 	- Update the tag tooltips once fakku has added descriptions to the newer ones.
